--- a/Client/frontend/src/app/components/log-in/log-in.component.css
+++ b/Client/frontend/src/app/components/log-in/log-in.component.css
@@ -6,3 +6,10 @@ body {
     position: relative;
     padding-left: 92%;
 }
+
+h4 {
+    position: relative;
+    top: 10%;
+    left: 15%;
+    color: darkslategray;
+}
