--- a/Client/frontend/src/app/components/log-in/log-in.component.html
+++ b/Client/frontend/src/app/components/log-in/log-in.component.html
@@ -6,7 +6,10 @@
   <title>LogIn</title>
 </head>
 <body>
-  <br><br><br>
+  <br><br>
+  <h4>Log In</h4>
+  <hr size="30">
+  <br>
   <div class="container">
     <div class="form-group">
         <div class="input-group mb-3">
@@ -14,7 +17,7 @@
               <label class="input-group-text" for="inputGroupSelect01">Role:</label>
             </div>
             <select class="custom-select" id="inputGroupSelect01" [(ngModel)]="role">
-              <option selected>Choose...</option>
+              <option value="" hidden disabled>Choose...</option>
               <option value="User">User</option>
               <option value="Company">Company</option>
               <option value="Admin">Admin</option>
