--- a/Client/frontend/src/app/components/navbar/navbar.component.html
+++ b/Client/frontend/src/app/components/navbar/navbar.component.html
@@ -14,11 +14,29 @@
   
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#" >Log In</a>
+            <li class="nav-item"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:
+              true}" *ngIf="router.url.includes('user')==false">
+              <a class="nav-link" [routerLink]="['/']">Log In</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:
+              true}" *ngIf="router.url.includes('user')==false">
               <a class="nav-link" [routerLink]="['/register']">Register</a>
+            </li>
+            <li class="nav-item"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:
+              true}" *ngIf="router.url.includes('user')==true">
+              <a class="nav-link" [routerLink]="['/user']">Home</a>
+            </li>
+            <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:
+              true}" *ngIf="router.url.includes('nursery')==true">
+              <a class="nav-link" [routerLink]="['/user/nursery/shop']">Shop</a>
+            </li>
+            <li class="nav-item"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:
+              true}" *ngIf="router.url.includes('nursery')==true">
+              <a class="nav-link" [routerLink]="['/user/nursery/warehouse', {select_mode: 'none'}]">Warehouse</a>
+            </li>
+            <li class="nav-item"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:
+              true}" *ngIf="router.url.includes('user')==true">
+              <a class="nav-link" [routerLink]="['/']">Log out</a>
             </li>
           </ul>
         </div>
