--- a/Client/frontend/src/app/components/nursery-specification/nursery-specification.component.css
+++ b/Client/frontend/src/app/components/nursery-specification/nursery-specification.component.css
@@ -1,3 +1,7 @@
+body {
+  background-image: url('/assets/resources/shopping181.png');
+}
+
 .outer-side, .inner-side, .front-side, .back-side {
   height: 150px;
   width: 150px;
@@ -43,11 +47,13 @@
 .temperature {
   position: relative;
   width: 300px;
+  left: 20px;
 }
 
 .water {
   position: relative;
-  width: 300px
+  width: 300px;
+  left:20px;
 }
 
 .card-header {
@@ -108,18 +114,30 @@
 }
 
 .nursery {
-  border-style: double;
-  border-radius: 5%;
-  border-color: saddlebrown;
+  position: relative;
 }
 
 table {
-  position: absolute;
-  width: 80%;
-  height: 80%;
+  position: relative;
   background-image: url('/assets/resources/grass_texture.png');
+  border-style: solid;
+  border-width: 5px;
+  border-radius: 1%;
+  border-color: saddlebrown;
 }
 
 td {
   padding: 5px;
+}
+
+.nursery_button {
+  position: relative;
+  left: 45%;
+}
+
+.joker {
+  position: relative;
+  background-image: url('/assets/resources/shopping181.png');
+  width: 500px;
+  height: 500px;
 }
