--- a/Client/frontend/src/app/components/user-home/user-home.component.html
+++ b/Client/frontend/src/app/components/user-home/user-home.component.html
@@ -6,30 +6,82 @@
     <title>Document</title>
 </head>
 <body>
-    <br>
-<table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Naziv</th>
-        <th scope="col">Mesto</th>
-        <th scope="col">Broj sadnica</th>
-        <th scope="col">Broj sl. mesta</th>
-        <th scope="col">Voda</th>
-        <th scope="col">Temperatura</th>
-      </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let nursery of nurseries, let i = index" (click)="specifications(nursery)">
-            <td scope="row">{{i+1}}</td>
-            <td>{{nursery.name}}</td>
-            <td>{{nursery.location}}</td>
-            <td>{{nursery.num_of_seedlings}}</td>
-            <td>{{nursery.free_space}}</td>
-            <td>{{nursery.water}}</td>
-            <td>{{nursery.temperature}}</td>
-        </tr>
-    </tbody>
-  </table>
+    <div class="view">
+      <table class="table table-hover table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Naziv</th>
+            <th scope="col">Mesto</th>
+            <th scope="col">Broj sadnica</th>
+            <th scope="col">Broj sl. mesta</th>
+            <th scope="col">Voda</th>
+            <th scope="col">Temperatura</th>
+            <th>
+              <a (click)="toggleView()" href="javascript:void(0)" title="add/discard new nursery">
+                <svg class="bi bi-plus-circle" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" *ngIf="add_view==false">
+                  <path fill-rule="evenodd" d="M8 3.5a.5.5 0 01.5.5v4a.5.5 0 01-.5.5H4a.5.5 0 010-1h3.5V4a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+                  <path fill-rule="evenodd" d="M7.5 8a.5.5 0 01.5-.5h4a.5.5 0 010 1H8.5V12a.5.5 0 01-1 0V8z" clip-rule="evenodd"/>
+                  <path fill-rule="evenodd" d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z" clip-rule="evenodd"/>
+                </svg>
+                <svg class="bi bi-dash-circle" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" *ngIf="add_view==true">
+                  <path fill-rule="evenodd" d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z" clip-rule="evenodd"/>
+                  <path fill-rule="evenodd" d="M3.5 8a.5.5 0 01.5-.5h8a.5.5 0 010 1H4a.5.5 0 01-.5-.5z" clip-rule="evenodd"/>
+                </svg>
+              </a>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let nursery of nurseries, let i = index" (click)="specifications(nursery)">
+                <td scope="row">{{i+1}}</td>
+                <td>{{nursery.name}}</td>
+                <td>{{nursery.location}}</td>
+                <td>{{nursery.num_of_seedlings}}</td>
+                <td>{{nursery.free_space}}</td>
+                <td>{{nursery.water}}</td>
+                <td>{{nursery.temperature}}</td>
+                <td></td>
+            </tr>
+            <tr *ngIf="add_view==true">
+              <td scope="row">{{nurseries.length+1}}</td>
+                <td>
+                  <input class="form-control" type="text" placeholder="Name" [(ngModel)]="new_nursery.name" name="namae">
+                  <small id="emailHelp" class="form-text text-danger" *ngIf="new_nursery.name==''">This field can't be empty.</small>
+                </td>
+                <td>
+                  <input class="form-control" type="text" placeholder="Location" [(ngModel)]="new_nursery.place" name="namae">
+                  <small id="emailHelp" class="form-text text-danger" *ngIf="new_nursery.place==''">This field can't be empty.</small>
+                </td>
+                <td>
+                  <input class="form-control" type="text" placeholder="0" readonly>
+                </td>
+                <td>
+                  <input class="form-control" type="text" placeholder="width" [(ngModel)]="new_nursery.width" name="namae"> 
+                  <small id="emailHelp" class="form-text text-danger" *ngIf="new_nursery.width==''">This field can't be empty.</small>
+                  <input class="form-control" type="text" placeholder="height" [(ngModel)]="new_nursery.height" name="namae">
+                  <small id="emailHelp" class="form-text text-danger" *ngIf="new_nursery.height==''">This field can't be empty.</small>
+                </td>
+                <td>
+                  <input class="form-control" type="text" placeholder="200" readonly>
+                </td>
+                <td>
+                  <input class="form-control" type="text" placeholder="18" readonly>
+                </td>
+                <td>
+                  <a href="javascript:void(0)" (click)="addNursery()" title="Confirm input">
+                    <svg class="bi bi-check-circle text-success" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" *ngIf="new_nursery.name != '' && new_nursery.place != '' && new_nursery.width != '' && new_nursery.height != ''">
+                      <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                      <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1013.5 8a.5.5 0 011 0 6.5 6.5 0 11-3.25-5.63.5.5 0 11-.5.865A5.472 5.472 0 008 2.5z" clip-rule="evenodd"/>
+                    </svg>
+                  </a>
+                </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="add">
+
+    </div>
 </body>
 </html>
