--- a/Client/frontend/src/app/components/company-home/company-home.component.html
+++ b/Client/frontend/src/app/components/company-home/company-home.component.html
@@ -16,7 +16,7 @@
                   <th scope="col">Nursery</th>
                   <th scope="col">Status</th>
                   <th scope="col">Quantity</th>
-                  <th scope='col'>Date</th>
+                  <th scope='col'><a class="sort" (click)="sortByDate()" matTooltip="sort by date (ascending)">Date</a></th>
                   <th scope='col'>Accept</th>
                   <th scope='col'>Decline</th>
                 </tr>
@@ -31,7 +31,7 @@
                     <td>{{order.quantity}}</td>
                     <td>{{order.date.getUTCDate()}}/{{order.date.getUTCMonth()+1}}/{{order.date.getUTCFullYear()}}</td>
                     <td>
-                        <a href="javascript:void(0)" matTooltip="accept" matTooltipPosition="after" (click)="acceptOrder(order)" class="accept">
+                        <a href="javascript:void(0)" matTooltip="accept" matTooltipPosition="after" (click)="acceptOrder(order)" class="accept" *ngIf="order.status!='travelling'">
                             <svg class="bi bi-check-circle" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
                                 <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1013.5 8a.5.5 0 011 0 6.5 6.5 0 11-3.25-5.63.5.5 0 11-.5.865A5.472 5.472 0 008 2.5z" clip-rule="evenodd"/>
@@ -39,7 +39,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="javascript:void(0)" matTooltip="decline" matTooltipPosition="after" (click)="declineOrder(order)" class="decline">
+                        <a href="javascript:void(0)" matTooltip="decline" matTooltipPosition="after" (click)="declineOrder(order)" class="decline" *ngIf="order.status!='travelling'">
                             <svg class="bi bi-x-circle-fill" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-4.146-3.146a.5.5 0 00-.708-.708L8 7.293 4.854 4.146a.5.5 0 10-.708.708L7.293 8l-3.147 3.146a.5.5 0 00.708.708L8 8.707l3.146 3.147a.5.5 0 00.708-.708L8.707 8l3.147-3.146z" clip-rule="evenodd"/>
                             </svg>
