--- a/Client/frontend/src/app/components/user-home/user-home.component.html
+++ b/Client/frontend/src/app/components/user-home/user-home.component.html
@@ -69,8 +69,8 @@
                   <input class="form-control" type="text" placeholder="18" readonly>
                 </td>
                 <td>
-                  <a href="javascript:void(0)" (click)="addNursery()" title="Confirm input">
-                    <svg class="bi bi-check-circle text-success" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" *ngIf="new_nursery.name != '' && new_nursery.place != '' && new_nursery.width != '' && new_nursery.height != ''">
+                  <a href="javascript:void(0)" (click)="addNursery()" title="Confirm input" class="add">
+                    <svg class="bi bi-check-circle text" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" *ngIf="new_nursery.name != '' && new_nursery.place != '' && new_nursery.width != '' && new_nursery.height != ''">
                       <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
                       <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1013.5 8a.5.5 0 011 0 6.5 6.5 0 11-3.25-5.63.5.5 0 11-.5.865A5.472 5.472 0 008 2.5z" clip-rule="evenodd"/>
                     </svg>
